fixed h2 readability

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -23,6 +23,7 @@ aside h2 {
     position: absolute;
     top: 30px;
     left: 100px;
+    background-color: aliceblue;
 }
 
 main img {
